@@ -1,9 +1,10 @@
 package com.codeit.weatherfit.domain.clothes.service;
 
+import com.codeit.weatherfit.domain.clothes.dto.request.ClothesAttributeDefCreateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.request.ClothesAttributeDefUpdateRequest;
+import com.codeit.weatherfit.domain.clothes.dto.request.ClothesCreateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.request.ClothesUpdateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.response.ClothesDto;
-import com.codeit.weatherfit.domain.clothes.dto.request.ClothesCreateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.response.ClothesDtoCursorResponse;
 import com.codeit.weatherfit.domain.clothes.entity.*;
 import com.codeit.weatherfit.domain.clothes.repository.ClothesAttributeRepository;
@@ -20,9 +21,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.Instant;
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 
 @Service
@@ -46,6 +45,36 @@ public class ClothesServiceImpl implements ClothesService {
                 request.type()
         );
         clothesRepository.save(clothes);
+
+        if (request.attributes() != null) {
+            for (ClothesAttributeDefCreateRequest attr : request.attributes()) {
+
+                UUID definitionId = UUID.fromString(attr.name());
+
+                ClothesAttributeType type =
+                        clothesAttributeTypeRepository.findById(definitionId)
+                                .orElseThrow(() -> new IllegalArgumentException("속성 정의 없음"));
+
+                // 🔥 핵심: 단일 value만 사용
+                if (attr.selectableValues() == null || attr.selectableValues().isEmpty()) {
+                    throw new IllegalArgumentException("속성 값 없음");
+                }
+
+                String value = attr.selectableValues().get(0);
+
+                SelectableValue selectableValue =
+                        selectableValueRepository
+                                .findByClothesAttributeTypeAndOption(type, value)
+                                .orElseThrow(() -> new IllegalArgumentException("잘못된 옵션"));
+
+                ClothesAttribute clothesAttribute =
+                        ClothesAttribute.create(clothes, selectableValue);
+
+                clothesAttributeRepository.save(clothesAttribute);
+            }
+        }
+
+        // 조회용
         List<ClothesAttribute> attributes =
                 clothesAttributeRepository.findByClothes(clothes);
 
@@ -64,19 +93,26 @@ public class ClothesServiceImpl implements ClothesService {
         );
 
         for (ClothesAttributeDefUpdateRequest attr : request.attributes()) {
-            ClothesAttributeType type = clothesAttributeTypeRepository.findByName(attr.name())
-                    .orElseThrow(() -> new IllegalArgumentException("옷 타입을 찾을 수 없습니다."));
-            List<SelectableValue> options =
-                    selectableValueRepository.findByClothesAttributeTypeAndOptionIn(
-                            type, attr.selectableValues()
-                    );
-            ClothesAttribute attribute = clothesAttributeRepository
-                    .findByClothesAndOption_ClothesAttributeType(
-                            clothes,
-                            type
-                    ).orElseThrow(() -> new IllegalArgumentException("옷 속성을 찾을 수 없습니다"));
+            UUID definitionId = UUID.fromString(attr.name());
+            ClothesAttributeType type = clothesAttributeTypeRepository.findById(definitionId)
+                    .orElseThrow(() -> new IllegalArgumentException("옷 속성 값을 찾을 수 없습니다"));
+            if (attr.selectableValues() == null || attr.selectableValues().size() != 1) {
+                throw new IllegalArgumentException("속성 값은 하나만 허용됩니다");
+            }
 
-            attribute.changeOption(options.get(0));
+            String value = attr.selectableValues().get(0);
+
+            SelectableValue selectableValue =
+                    selectableValueRepository
+                            .findByClothesAttributeTypeAndOption(type, value)
+                            .orElseThrow(() -> new IllegalArgumentException("잘못된 옵션"));
+
+            ClothesAttribute attribute =
+                    clothesAttributeRepository
+                            .findByClothesAndOption_ClothesAttributeType(clothes, type)
+                            .orElseThrow(() -> new IllegalArgumentException("옷 속성 없음"));
+
+            attribute.changeOption(selectableValue);
         }
 
         List<ClothesAttribute> attributes =
@@ -86,6 +122,7 @@ public class ClothesServiceImpl implements ClothesService {
     }
 
     @Override
+    @Transactional
     public void delete(UUID clothesId) {
         Clothes clothes = clothesRepository.findById(clothesId)
                 .orElseThrow(() -> new IllegalArgumentException("옷을 찾을 수 없습니다.")); // 나즁에 커스텀 예외 처리
@@ -95,6 +132,7 @@ public class ClothesServiceImpl implements ClothesService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ClothesDtoCursorResponse search(UUID ownerId, String cursor, UUID idAfter, ClothesType type, int size) {
 
         Pageable pageable = PageRequest.of(0, size + 1);
@@ -130,7 +168,7 @@ public class ClothesServiceImpl implements ClothesService {
                 })
                 .toList();
 
-        Clothes last = page.isEmpty() ? null : page.get(page.size() - 1);
+        Clothes last = page.isEmpty() ? null : page.getLast();
 
         String nextCursor = last != null ? last.getCreatedAt().toString() : null;
         UUID nextIdAfter = last != null ? last.getId() : null;
